# ai-monitor

./: .gitignore  LICENSE  README.md  ai-monitor.py  ai-monitor.spec  pyproject.toml
.github/workflows/: release.yml
