[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-monitor"
version = "1.0.0"
description = "Real-time NVIDIA GPU monitoring dashboard with PyQt6"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "charettep" },
]
keywords = ["nvidia", "gpu", "monitor", "dashboard", "pyqt6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "PyQt6",
    "pyqtgraph",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/charettep/ai-monitor"
Repository = "https://github.com/charettep/ai-monitor"
Issues = "https://github.com/charettep/ai-monitor/issues"

[project.scripts]
ai-monitor = "ai_monitor:main"

[tool.setuptools]
py-modules = ["ai_monitor"]
